# reflect_json

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: macro_count.h  macro_for_each.h  macro_for_each_impl.h  macro_tool.h  macro_variable.h  reflect.hpp  reflect_json.hpp
src/: gen_for_each.jl  main.cpp
test/: test.cpp
